#51 fixed this issue items now scrollable again on mobile devices

--- a/app/assets/stylesheets/media-queries.scss
+++ b/app/assets/stylesheets/media-queries.scss
@@ -164,6 +164,7 @@
       display: block;
       padding-right: 5px;
       .item {
+        overflow-y: scroll;
       }
     }
   }
